src/parser/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package parser;

import syntaxtree.*;
import visitor.*;

public class MiniJavaParser implements MiniJavaParserConstants {
    public MiniJavaParser() {}

/* GRAMMAR */
  final public Program Program() throws ParseException {MainClass mc = null; ClassDeclList cdl = new ClassDeclList(); ClassDecl cd = null;
    try {
      mc = MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CLASS:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        cd = ClassDecl();
cdl.addElement(cd);
      }
      jj_consume_token(0);
    } catch (TokenMgrError e) {
System.err.println(e);
        System.exit(1); // According to Tigris spec

    }
{if ("" != null) return new Program(mc, cdl);}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {Identifier i1, i2, i3; StatementList sl = new StatementList(); Statement s;
    VarDeclList vdl = new VarDeclList(); VarDecl vd;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    i3 = Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      vd = VarDecl();
vdl.addElement(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case LBRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      s = Stmt();
sl.addElement(s);
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(i1, i2, i3, sl, vdl);}
    throw new Error("Missing return statement in function");
  }

// NOTE ClassDeclExtends is an extension to the grammar
  final public ClassDecl ClassDecl() throws ParseException {Identifier i; VarDecl vd; VarDeclList vdl = new VarDeclList(); MethodDecl md;
    MethodDeclList mdl = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_4;
      }
      vd = VarDecl();
vdl.addElement(vd);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      md = MethodDecl();
mdl.addElement(md);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclSimple(i, vdl, mdl);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDecl() throws ParseException {Type t; Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDecl() throws ParseException {Type t; Identifier i; FormalList fl = new FormalList(); VarDecl vd; VarDeclList vdl  = new VarDeclList();
    Statement s; StatementList sl = new StatementList(); Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      vd = VarDecl();
vdl.addElement(vd);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case LBRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_7;
      }
      s = Stmt();
sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(t, i, fl, vdl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  final public FormalList FormalList() throws ParseException {Formal f; FormalList fl = new FormalList(); Type t; Identifier i;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:{
      t = Type();
      i = Identifier();
fl.addElement(new Formal(t, i));
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_8;
        }
        f = FormalRest();
fl.addElement(f);
      }
      break;
      }
    default:
      jj_la1[6] = jj_gen;

    }
{if ("" != null) return fl;}
    throw new Error("Missing return statement in function");
  }

  final public Formal FormalRest() throws ParseException {Type t; Identifier i;
    jj_consume_token(COMMA);
    t = Type();
    i = Identifier();
{if ("" != null) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {Type t; Identifier i;
    if (jj_2_3(2)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
t = new IntArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
t = new BooleanType();
        break;
        }
      case INT:{
        jj_consume_token(INT);
t = new IntegerType();
        break;
        }
      case IDENTIFIER:{
        i = Identifier();
t  = new IdentifierType(i.s);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Statement Stmt() throws ParseException {StatementList sl = new StatementList(); Statement s, s1, s2;
    Exp e1, e2; Identifier i; VarDeclList vdl = new VarDeclList();
    VarDecl vd;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
      label_9:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_9;
        }
        vd = VarDecl();
vdl.addElement(vd);
      }
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case PRINT:
        case LBRACE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_10;
        }
        s1 = Stmt();
sl.addElement(s1);
      }
      jj_consume_token(RBRACE);
s = new Block(sl, vdl);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Stmt();
      jj_consume_token(ELSE);
      s2 = Stmt();
s = new If(e1, s1, s2);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Stmt();
s = new While(e1, s1);
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
s = new Print(e1);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_5(2)) {
        i = Identifier();
        jj_consume_token(ASSIGN);
        e1 = Exp();
        jj_consume_token(SEMICOLON);
s = new Assign(i, e1);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          i = Identifier();
          jj_consume_token(LBRACKET);
          e1 = Exp();
          jj_consume_token(RBRACKET);
          jj_consume_token(ASSIGN);
          e2 = Exp();
          jj_consume_token(SEMICOLON);
s = new ArrayAssign(i, e1, e2);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
  }

// Fixes op precedence but not associativity, should be handled in AST
  final public Exp Exp() throws ParseException {Exp e;
    e = Or();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

// Binds the loosest
  final public Exp Or() throws ParseException {Exp e1, e2;
    e1 = And();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_11;
      }
      jj_consume_token(OR);
      e2 = And();
e1 = new Or(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp And() throws ParseException {Exp e1, e2;
    e1 = Equality();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_12;
      }
      jj_consume_token(AND);
      e2 = Equality();
e1 = new And(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Equality() throws ParseException {Exp e1, e2; String op;
    // NOTE This was changed from [] to ()*
        e1 = Relational();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:
      case NEQ:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_13;
      }
      op = EqualityOpHelper();
      e2 = Relational();
e1 = CompareOp(op, e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public String EqualityOpHelper() throws ParseException {String op;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
op = "==";
      break;
      }
    case NEQ:{
      jj_consume_token(NEQ);
op = "!=";
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return op;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Relational() throws ParseException {Exp e1, e2; String op;
    e1 = Additive();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LT:
    case GT:
    case LEQ:
    case GEQ:{
      op = RelationalOpHelper();
      e2 = Additive();
e1 = CompareOp(op, e1, e2);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public String RelationalOpHelper() throws ParseException {String op;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LT:{
      jj_consume_token(LT);
op = "<";
      break;
      }
    case GT:{
      jj_consume_token(GT);
op = ">";
      break;
      }
    case LEQ:{
      jj_consume_token(LEQ);
op = "<=";
      break;
      }
    case GEQ:{
      jj_consume_token(GEQ);
op = ">=";
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return op;}
    throw new Error("Missing return statement in function");
  }

// Helper method to get the right operator object
  final public Exp CompareOp(String op, Exp e1, Exp e2) throws ParseException {Exp e;
switch(op) {
            case "==": e = new Equals(e1, e2);
                break;
            case "!=": e = new EqualsNot(e1, e2);
                break;
            case "<": e = new LessThan(e1, e2);
                break;
            case ">": e = new GreaterThan(e1, e2);
                break;
            case "<=": e = new LessThanEquals(e1, e2);
                break;
            case ">=": e = new GreaterThanEquals(e1, e2);
                break;
            default: e = null;
                break;
        }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Additive() throws ParseException {Exp e1, e2; String op;
    e1 = Times();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_14;
      }
      op = AdditiveOpHelper();
      e2 = Times();
e1 = AdditiveOp(op, e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public String AdditiveOpHelper() throws ParseException {String op;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
op = "+";
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
op = "-";
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return op;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AdditiveOp(String op, Exp e1, Exp e2) throws ParseException {Exp e;
switch(op) {
            case "+": e = new Plus(e1, e2);
                break;
            case "-": e = new Minus(e1, e2);
                break;
            default: e = null;
                break;
        }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Times() throws ParseException {Exp e1, e2;
    e1 = PrefixExp();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_15;
      }
      jj_consume_token(STAR);
      e2 = PrefixExp();
e1 = new Times(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp PrefixExp() throws ParseException {Exp e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BANG:{
      e = Not();
      break;
      }
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case LPAREN:
    case IDENTIFIER:
    case INTEGER_LITERAL:{
      e = PostfixExp();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Not() throws ParseException {Exp e;
    label_16:
    while (true) {
      jj_consume_token(BANG);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BANG:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_16;
      }
    }
    e = PostfixExp();
e = new Not(e);
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp PostfixExp() throws ParseException {Exp e, ie; Identifier i; ExpList el;
    e = PrimaryExp();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_17;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:{
        jj_consume_token(LBRACKET);
        ie = Exp();
        jj_consume_token(RBRACKET);
e = new ArrayLookup(e, ie);
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        if (jj_2_6(2)) {
          jj_consume_token(DOT);
          i = Identifier();
          jj_consume_token(LPAREN);
          el = ExpList();
          jj_consume_token(RPAREN);
e = new Call(e, i, el);
        } else if (jj_2_7(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
e = new ArrayLength(e);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

// Binds the tightest
  final public Exp PrimaryExp() throws ParseException {Exp e, ie, ep; Identifier i, id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      e = IntegerLiteral();
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
e = new True();
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
e = new False();
      break;
      }
    case IDENTIFIER:{
      i = Identifier();
e = new IdentifierExp(i.s);
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
e = new This();
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      if (jj_2_8(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        ie = Exp();
        jj_consume_token(RBRACKET);
        NewArrayRest(ie);
e = new NewArray(ie);
      } else if (jj_2_9(2)) {
        jj_consume_token(NEW);
        id = Identifier();
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
e = new NewObject(id);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

// To avoid multidimensional array creation
  final public Exp NewArrayRest(Exp ie) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACKET:{
      jj_consume_token(LBRACKET);
{if (true) throw new ParseException("Multidimensional array creation");}
      break;
      }
    default:
      jj_la1[25] = jj_gen;
{if ("" != null) return new NewArray(ie);}
    }
    throw new Error("Missing return statement in function");
  }

  final public ExpList ExpList() throws ParseException {Exp e1, e2; ExpList el = new ExpList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case BANG:
    case LPAREN:
    case IDENTIFIER:
    case INTEGER_LITERAL:{
      e1 = Exp();
el.addElement(e1);
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          break label_18;
        }
        e2 = ExpRest();
el.addElement(e2);
      }
      break;
      }
    default:
      jj_la1[27] = jj_gen;

    }
{if ("" != null) return el;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpRest() throws ParseException {Exp e;
    jj_consume_token(COMMA);
    e = Exp();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

// To be able to extract the identifier value
  final public Identifier Identifier() throws ParseException {Token i;
    i = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Identifier(i.toString());}
    throw new Error("Missing return statement in function");
  }

// To be able to extract the int value
  final public IntegerLiteral IntegerLiteral() throws ParseException {Token il;
    il = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new IntegerLiteral(Integer.parseInt(il.toString()));}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }
